[package]
name = "aoc-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nwg = {version = "^1.0.12", package = "native-windows-gui"}
nwd = {version = "^1.0.3", package = "native-windows-derive" } # Optional. Only if the derive macro is used.
sensible-env-logger = "0.3.2"
pretty_env_logger = "^0.4"
log = "^0.4"